k8s/apps/ai/toolhive/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  hostnames:
    - mcp.bbck.dev
  parentRefs:
    - name: envoy-external
      namespace: networking
  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway
          port: 4483
